# competitive-programming

./: .gitignore  Cargo.toml  README.md  code_runner_cpp.sh  code_runner_py.sh  code_runner_rs.sh  segtree.rs
0_libraries/: 0_utils.py  1_graph.py  1_graphs.py  2_integer.py  3_combination.py  4_bisect.py  8_Bit.py  8_MedianContainer.py  8_RollingHash.py  8_SegTree.py  8_UnionFind.py  9_cpp_template.cpp  abc_patterns.md
0_libraries/acl/: math.py
0_libraries/cpp_libs/: 0_utils.cpp  2_graph.cpp  2_integer.cpp  2_math.cpp  2_tree.cpp  3_combination.cpp  8_LazySegTree.cpp  9_cpp_template.cpp  xx_def.hpp
0_libraries/python/: 0_utils.py  2_integer.py
0_libraries/python_libs/: 0_utils.py  1_graph.py  2_integer.py  2_math.py  3_combination.py  8_SegTree.py
0_libraries/rust_libs/: union_find.rs
0_libraries/typicals/: LCA.py  LCA_good.py  LIS.py  doubling.py  zeta.py
1_contest/abc169/: a.out  sample.py
1_contest/abc170/: heapdict_sample.py
1_contest/abc184/: e2.py
1_contest/abc185/: x.cpp
2_kakomon/: abc141_e.py  agc033_a.py  atc1_a.py  atcoder2.py  ddcc_d.py  joi2008ho_c.py  nomura_c.py  sample.py  tenka1_c.py  tmp.py
8_heuristics/: intro_heuristics_a.cpp  intro_heuristics_a.py  intro_heuristics_c.cpp  out.txt
99_code_runner_tools/: code_runner_cpp.sh  code_runner_input.txt  code_runner_rs.sh
99_code_runner_tools/runner_rs/: Cargo.toml
99_code_runner_tools/runner_rs/src/: main.rs
9_heuristics/: intro_heuristics_b.py
9_others/: atcoder_scrape.py  code_festival_final_c.py  tenka1_2015_qualB_b.py
runner_rs/: Cargo.toml
rust_code/: Cargo.toml
(+439 files in other folders)
